--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-    <h1>mi primer titulo editado en CSS</h1>
+    <h1>SELECTORES</h1>
     <h2 class="titulo-h2">Mi primer H2 con CSS</h2>
     <input class="titulo-h2" type="text" name="" value="HOLA">
     <button id="element">Mi primer boton</button>
@@ -17,6 +17,22 @@
         Eaque possimus est voluptatem quis voluptatibus. Quos quibusdam odio ullam quas neque libero autem aperiam voluptatem, debitis labore nemo expedita, est assumenda animi repudiandae dolor, nesciunt laudantium sint ipsa impedit.
         Autem obcaecati, porro commodi ratione voluptatem est tempora assumenda delectus aspernatur cupiditate ipsam sunt minus quia numquam harum eligendi ut, asperiores rerum perferendis illo repellat error? Provident, nobis! Cum, eveniet?    
     </p>
- 
+    <BR><BR>
+    <H1>ESPECIFICIDAD</H1>
+    <!--    ESPECIFICIDAD  -->
+    <div class="contact-form">
+    <input type="text" class="contact-form__input" placeholder="1">
+    <input type="text" class="contact-form__input--active" placeholder="2">
+    <input type="text" class="contact-form__input" placeholder="3">
+    <input type="text" class="contact-form__input" placeholder="4">
+    <input type="password" placeholder="********">
+    </div>
+    <div>
+        <p class="contact-form__p">
+            <h2 class="contact-form__p-h2">HOLA</h2>
+        </p>
+    </div>
+    <br><br>
+    <h1>UNIDADES</h1>
 </body>
 </html>
