git ignore agregado

--- a/index.html
+++ b/index.html
@@ -34,5 +34,15 @@
     </div>
     <br><br>
     <h1>UNIDADES</h1>
+    <div class="unidades-form">
+        <p class="unidades-form__p">
+            medidad hecha con mm</p>
+            <p class="unidades-form__p--active">medida hecha con em: un em es igual al valor que le demos a la caja contenedora</p>    
+        </div>
+    
+    <div>
+        <h2></h2>
+        
+    </div>
 </body>
 </html>
